# music-room-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  routers.py  settings.example.yaml  settings.schema.yaml
.github/workflows/: build-docker.yaml  deploy-production.yaml  deploy-staging.yaml
deploy/: Dockerfile
handlers/: registration.py
keyboards/: main_menu.py
redis/: Dockerfile  redis.conf
src/: api.py  config_schema.py  constants.py  dispatcher.py  filters.py  keyboards.py  logging_.py  main.py  menu.py  middlewares.py  timezone.py
src/handlers/: __init__.py  bookings.py  create_booking.py  image_schedule.py  menu.py  my_bookings.py  registration.py  schedule.py
src/routers/: __init__.py  admin.py  schedule.py
src/routers/booking/: __init__.py  callback_data.py  create_booking_routes.py  my_bookings_routes.py  states.py  widgets.py
src/routers/booking/widgets/: calendar.py  time_range.py
src/routers/registration/: __init__.py  keyboards.py  routes.py  states.py  utils.py
