[tool.poetry]
name = "innohassle-musicroombot"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"
isort = "^5.12.0"
black = "^23.9.1"
aiohttp = "^3.8.6"
aiogram-dialog = "^2.0.0"
ruff = "^0.1.9"

[tool.black]
line-length = 120 # Maximum line length

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
