[tool.poetry]
name = "innohassle-musicroombot"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
aiohttp = "^3.8.6"
aiogram-dialog = "^2.0.0"
ruff = "^0.1.9"
redis = "^5.0.1"
python-dotenv = "^1.0.1"

[tool.ruff]
line-length = 120
ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
