[tool.poetry]
name = "innohassle-musicroombot"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
aiohttp = "^3.9.4"
aiogram-dialog = "^2.0.0"
redis = "^5.0.1"
pyyaml = "^6.0.1"
colorlog = "^6.8.2"

[tool.poetry.group.code-style]
optional = true
[tool.poetry.group.code-style.dependencies]
ruff = "^0.2.2"
pre-commit = "^3.6.2"

[tool.ruff]
line-length = 120
ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
